--- a/zengarden/style-guide-template/package.json
+++ b/zengarden/style-guide-template/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "prestart": "rimraf build/*",
-    "start": "parcel src/index.html -d build/",
+    "start": "parcel index.html -d build/",
     "prebuild": "rimraf dist/*",
-    "build": "parcel build src/index.html --public-url ./",
-    "watch": "parcel watch src/index.html -d build/"
+    "build": "parcel build index.html --public-url ./",
+    "watch": "parcel watch index.html -d build/"
   },
   "author": "Shane T",
   "license": "GPL-2.0",
